examples/test/testpolicy10674.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10674
  namespace: namespace1
spec:
  podSelector:
    matchLabels:
      key23: value30
      key33: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value17
          key10: value1
      podSelector:
        matchLabels:
          key21: value37
          key15: value1
          key29: value34
